# internal-ai-gateway

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
functions/admin/: package.json
functions/engineer/: package.json  usage.ts
functions/proxy/: package.json  tsconfig.json
infra/: cdk.json  package.json  tsconfig.json
infra/lib/: app-stack.test.ts  app-stack.ts  dynamodb-stack.test.ts  dynamodb-stack.ts  ecs-stack.test.ts  ecs-stack.ts  lambda-stack.ts  network-stack.test.ts  reconciliation-stack.test.ts  reconciliation-stack.ts  s3-stack.test.ts  s3-stack.ts  secrets-stack.test.ts  secrets-stack.ts
infra/stacks/: dynamodb-stack.ts  ecs-stack.test.ts  ecs-stack.ts  gateway-dynamodb-tables.ts  integration-dynamodb-stack.test.ts  integration-dynamodb-stack.ts  lambda-stack.test.ts  network-stack.test.ts  network-stack.ts  provider-mock-stack.test.ts  provider-mock-stack.ts  reconciliation-stack.test.ts  reconciliation-stack.ts  secrets-stack.test.ts  secrets-stack.ts  service-discovery-stack.test.ts  service-discovery-stack.ts
services/provider-mock/: Cargo.toml  Dockerfile
services/provider-mock/src/: app.rs  app_test.rs  main.rs
services/proxy/: Cargo.toml  Dockerfile  package.json  server.test.ts  server.ts
services/proxy/src/: anthropic.rs  anthropic_request.rs  anthropic_request_test.rs  anthropic_test.rs  api_key.rs  api_key_test.rs  app.rs  app_test.rs  auth.rs  auth_test.rs  background_tasks.rs  background_tasks_test.rs  config.rs  config_test.rs  engineer_auth.rs  engineer_auth_test.rs  main.rs  metrics.rs  openai.rs  openai_request.rs  openai_request_test.rs  openai_test.rs  provider_url.rs  rate_limit.rs  rate_limit_test.rs  request_body.rs  request_body_test.rs  shutdown.rs  sse.rs  sse_test.rs  streams.rs  streams_test.rs  telemetry.rs  token_accounting.rs  token_reconciliation.rs  token_reconciliation_test.rs  token_reservation.rs  token_reservation_test.rs  token_usage.rs  token_usage_test.rs
shared/: package.json
