[package]
name = "proxy-service"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.18"
aws-sdk-cloudwatch = "1.118.0"
aws-sdk-secretsmanager = "1.108.0"
axum = "0.8"
hex = "0.4"
hmac = "0.12"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
