[package]
name = "proxy-service"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.18"
aws-sdk-cloudwatch = "1.118.0"
aws-sdk-dynamodb = "1.105.0"
aws-sdk-secretsmanager = "1.108.0"
axum = "0.8"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde_json = "1"
sha2 = "0.10"
struson = "0.7.2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
